using SIMSProject.Models;

namespace SIMSProject.RepositoryInterfaces;

public interface IAccessRequestRepository : IRepository<AccessRequest>
{
}
