using SIMSProject.Models;

namespace SIMSProject.RepositoryInterfaces;

public interface IApartmentMembershipRepository : IRepository<ApartmentMembership>
{
}
