using SIMSProject.Models;

namespace SIMSProject.RepositoryInterfaces;

public interface IApartmentRepository : IRepository<Apartment>
{
}
