using SIMSProject.Models;

namespace SIMSProject.RepositoryInterfaces;

public interface IBuildingRepository : IRepository<Building>
{
}
