using SIMSProject.Models;

namespace SIMSProject.RepositoryInterfaces;

public interface IUserRepository : IRepository<User>
{
}
