using System.Windows;

namespace SIMSProject.Wpf;

public partial class App : Application
{
}
